--- a/02.ELK/visual.html
+++ b/02.ELK/visual.html
@@ -11,6 +11,9 @@
             height="600" width="800">
     </iframe> -->
 
+    <a href="http://192.168.0.38:5500/02.ELK/visual.html"
+    
+
     <a href="http://127.0.0.1:5601/goto/b18ae3fc4f0dff4c94774a691c52cc36">
         dashboard 바로 가기
     </a>
